logs/run_20251013_013547.log
2025-10-13 01:35:47 [WD] pid=7012
  File "C:\Users\owner\Desktop\es_futures_backtester\paper_trader.py", line 246
    ap.add_argument("--max-consec-losses", type:int, default=3, help="Halt for the day after this many losses in a row.")
                                               ^
SyntaxError: invalid syntax
2025-10-13 01:35:48 [WD] Child exited: code=1
